Shadow and overflow bugs fixed

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -17,8 +17,8 @@ $font-family--secondary: "GraphikLCG", -apple-system, BlinkMacSystemFont, "Robot
 
 //common
 $shadow: 0px 3px 3px rgba($black-color, 0.25);
-$box-shadow: 0px 24px 54px rgba($black-color, 0.2);
-$input-shadow: 0px 0px 10px rgba($black-color, 0.2);
+$box-shadow: 0px 24px 54px rgba($black-color, 0.1);
+$input-shadow: 0px 0px 10px rgba($black-color, 0.1);
 $border-radius: 5px;
 $sticky-menu-bottom-space: 12px;
 $menu-item-transition: all 0.25s ease-in;
