--- a/src/assets/scss/components/_page-contacts.scss
+++ b/src/assets/scss/components/_page-contacts.scss
@@ -45,20 +45,27 @@
     @include media-breakpoint-up(md) {
       position: static;
       padding-top: 35px;
-      margin-bottom: 60px;
+      padding-bottom: 60px;
       grid-template-columns: 400px  1fr 25px 1fr 65px;
       grid-template-rows: repeat(2, auto) 450px;
       grid-template-areas:
-        "switcher . panel panel panel"
-        "select . panel panel panel"
-        "list details details details .";
+        "switcher . . panel panel"
+        "select . . panel panel"
+        "list . . . .";
       grid-column-gap: 10px;
       grid-row-gap: 10px;
       height: auto;
     }
 
     @include media-breakpoint-up(xl) {
+      padding-right: 0;
+      padding-left: 0;
+      grid-template-areas:
+        "switcher . panel panel panel"
+        "select . panel panel panel"
+        "list details details details .";
       box-sizing: content-box;
+      overflow: visible;
     }
   }
 
@@ -199,6 +206,7 @@
     @include media-breakpoint-up(md) {
       padding: 20px 10px 20px 20px;
       grid-area: list;
+      box-shadow: $box-shadow;
     }
 
     .page-contacts--hide-list & {
@@ -214,36 +222,50 @@
     box-sizing: border-box;
     grid-area: panel;
     display: grid;
+    grid-template-columns: 1fr;
     grid-row-gap: 10px;
     background-color: $primary-color;
     border-radius: $border-radius;
     box-shadow: $box-shadow;
 
+    @include media-breakpoint-up(sm) {
+      padding: 20px;
+      grid-template-columns: auto 1fr;
+      grid-column-gap: 20px;
+    }
+
     @include media-breakpoint-only(md) {
       display: none;
+    }
+
+    @include media-breakpoint-up(lg) {
+      margin: 0;
+    }
+
+    @include media-breakpoint-up(xl) {
+      height: 90px;
     }
 
     .page-contacts--map-panel & {
       display: none;
 
       @include media-breakpoint-up(lg) {
-        display: block;
+        display: grid;
       }
     }
 
     @include moveContactPageInfoLeft;
-
-    @include media-breakpoint-up(md) {
-      margin: 0;
-      height: 90px;
-      grid-template-columns: 1fr auto;
-      grid-template-rows: repeat(2, auto);
-    }
   }
 
   &__feedback p {
     margin: 0;
     grid-column: 1 / -1;
+  }
+
+  &__feedback div:last-of-type {
+    @include media-breakpoint-only(lg) {
+      display: none;
+    }
   }
 
   &__map {
