--- a/src/assets/scss/components/_preloader.scss
+++ b/src/assets/scss/components/_preloader.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   background-color: $white-color;
+  border-radius: $border-radius;
 
   .loading & {
     display: flex;
